// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rewardUtils matches snapshot for calculateMonthlyPoints 1`] = `
Array [
  Object {
    "customerId": 1,
    "customerName": "John Doe",
    "month": "January 2024",
    "rewardPoints": 50,
  },
]
`;

exports[`rewardUtils matches snapshot for calculateRewardPoints 1`] = `
Array [
  Object {
    "customerId": 1,
    "customerName": "John Doe",
    "firstname": "John",
    "lastname": "Doe",
    "price": 120,
    "productPurchased": "Test Product",
    "purchaseDate": "2024-01-01",
    "rewardPoints": 90,
    "transactionId": 1,
  },
  Object {
    "customerId": 2,
    "customerName": "Jane Doe",
    "firstname": "Jane",
    "lastname": "Doe",
    "price": 70,
    "productPurchased": "Test Product",
    "purchaseDate": "2024-01-02",
    "rewardPoints": 20,
    "transactionId": 2,
  },
]
`;

exports[`rewardUtils matches snapshot for calculateTotalRewardPoints 1`] = `
Array [
  Object {
    "customerName": "John Doe",
    "rewardPoints": 50,
  },
]
`;
